alignment fixes

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -131,7 +131,7 @@ mat-toolbar img {
     position: absolute;
     width: 60%;
     height: 300px;
-    top: 28%;
+    top: 35%;
     left: 60%;
     transform: translate(-50%, -50%);
     background-color: #f97a2073;
